corrigir bug overflow

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,7 @@
+html{
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
 body{
     background-color: #233A59;
     margin: 0;
